Commit to Mission Page

--- a/collabsite/style.css
+++ b/collabsite/style.css
@@ -1,8 +1,7 @@
 
 body {
 	width:100%;
-	background-image:url("http://madworldnews.com/wp-content/uploads/2014/08/homelessness-look-away.jpg"
-		)
+	background-image:url("http://madworldnews.com/wp-content/uploads/2014/08/homelessness-look-away.jpg")
 
 
 }
