--- a/collabsite/style.css
+++ b/collabsite/style.css
@@ -41,3 +41,66 @@ body {
     color: #333333;
 }
 
+.container {
+	
+}
+
+#pic {
+	left: 0;
+	right: 0;
+	/* preserve aspect ratio*/
+	min-width: 100%;
+	min-height: 100%;
+	z-index: -1;
+}
+h1 {
+	font-size: 50px;
+	color: black;
+	margin-left: 200px;
+	margin-top: 100px;
+	font-style: italic;
+}
+p {
+	font-size: 22px;
+	margin-left: 200px;
+	margin-right: 300px;
+}
+h2 {
+	font-size: 32px;
+	margin-left: 200px;
+}
+	
+.info {
+	margin-left: 200px;
+	margin-top: 100px;
+	float: left;
+	font-size: 20px;
+}
+.btn {
+  background: #3498db;;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin-left: 200px;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+  margin-left: 200px;
+}
