--- a/collabsite/missionstyle.css
+++ b/collabsite/missionstyle.css
@@ -55,7 +55,7 @@ h1 {
 	font-size: 50px;
 	color: black;
 	margin-left: 200px;
-	margin-top: 100px;
+	margin-top: 80px;
 	font-style: italic;
 }
 p {
@@ -68,7 +68,7 @@ p {
 	width: 800px;
 	border: 2px solid black;
 	margin-left: 200px;
-	margin-top: 150px;
+	margin-top: 80px;
 }
 h2 {
 	font-size: 32px;
@@ -124,5 +124,17 @@ form {
   margin-left: 100px;
 }
 .footer {
-
+	margin-left: 200px;	
 }
+.icons {
+	margin-left: 200px;
+	width: 1000px;
+	height: 200px;
+	background-color: grey;
+}
+
+
+
+
+
+
