--- a/collabsite/style.css
+++ b/collabsite/style.css
@@ -59,6 +59,7 @@ a:link {
 p {
 	font-size:20px;
 }
+/*will css*/
 
 #bg {
 	position: fixed;
@@ -69,6 +70,7 @@ p {
 	z-index: -2;
 }
 
+/*jane css*/
 #pic {
 	left: 0;
 	right: 0;
