--- a/collabsite/style.css
+++ b/collabsite/style.css
@@ -1,3 +1,7 @@
+body {
+	width:100%;
+}
+
 
 .top-navigation {
 	font-size:16px;
@@ -38,6 +42,10 @@ a:link {
 	text-decoration: none;
 }
 
+a:visited {
+	text-decoration: none;
+    color: #838994;
+}
 .top-navigation .links a:hover {
     cursor: pointer;
     color: #333333;
@@ -57,7 +65,7 @@ a:link {
 }
 
 p {
-	font-size:20px;
+	font-size:24px;
 }
 /*will css*/
 
@@ -124,7 +132,7 @@ form {
 	margin: 50px 10px 20px 25px;
 }
 .btn {
-  background: #3498db;
+  background: red;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
   background-image: -ms-linear-gradient(top, #3498db, #2980b9);
@@ -150,4 +158,8 @@ form {
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
   margin-left: 100px;
+}
+
+ul> a {
+	margin-left:20px;
 }
