--- a/collabsite/missionstyle.css
+++ b/collabsite/missionstyle.css
@@ -1,7 +1,10 @@
 
 body {
 	width:100%;
+	font-family: Arial;
 	}
+
+/* This starts middle will's css for the nav bar*/
 .top-navigation {
 	font-size:16px;
 	background-image:url("http://i57.tinypic.com/2roncyp.jpg");
@@ -11,18 +14,14 @@ body {
 	background-color: black;
 	top:0;
 	height:150px;
-
 }
 
 .top-navigation .links {
-	
-	
 	letter-spacing: 0.03em;
 	float:right;
 	margin-right:20px;
     font-family: 'Roboto', sans-serif;
-    color: #838994;
-  
+    color: #838994;  
     margin-top: 90px;
     
 }
@@ -34,25 +33,25 @@ body {
     display: inline-block;
     margin-left: 20px;
 }
-
 a:link {
 	    font-family: 'Roboto', sans-serif;
     color: #838994;
 	text-decoration: none;
 }
-
 .top-navigation .links a:hover {
     cursor: pointer;
     color: #333333;
 }
+/*This ends middle will's css for the nav bar*/
 
 
 
 
-.container {
-	
+section {
+	height: 400px;
+	width: 100%;
+	border-bottom: 1px dotted grey;
 }
-
 #pic {
 	left: 0;
 	right: 0;
@@ -65,80 +64,60 @@ h1 {
 	font-size: 50px;
 	color: black;
 	margin-left: 200px;
-	margin-top: 80px;
+	margin-top: 120px;
 	font-style: italic;
 }
-p .color{
+p {
 	font-size: 22px;
 	margin-left: 200px;
 	margin-right: 300px;
 }
-.box {
-	height: 220px;
-	width: 800px;
-	border: 2px solid black;
+
+
+
+.second {
+	height: 620px;
+	width: 100%;
+	border-bottom: 1px dotted grey;
+}
+h2 {
+	margin-top: 80px;
+	font-size: 32px;
+	margin-left: 20px;
+	line-height: 10px;
+	color: #d73030;
 	margin-left: 200px;
-	margin-top: 40px;
+
+	
+}
+.second .pone {
+	font-size: 50px;
+	font-style: italic;
+	margin-left: 300px;
+	margin-right: 300px;
+	padding-top: 20px;
+
+}
+.box {
+	height: 320px;
+	width: 600px;
+	border: 2px solid black;
+	margin-left: 300px;
+	margin-top: 80px;
 	background-color: #c8c8c8;
 	margin-bottom: 40px;
 	
 }
-h2 {
-	font-size: 32px;
-	margin-left: 20px;
-	line-height: 10px;
-
-	
-}
-.red {
-	color: #d73030;
-}
-	
-.info {
+.ptwo {
+	font-size: 36px;
+	font-style: italic;
 	margin-left: 200px;
-	margin-top: 100px;
-	font-size: 20px;
-	background-color: #d73030;
-	height: 280px;
-	width: 800px;
-	background-color: #d73030;
-	margin-bottom: 100px;
-	padding: 1em;
-	border: 1px solid black;
-/*	float: left;
-*/
-
-	}
-
-.info .text {
-	
-    font-family: Arial, Sans-Serif;
-    font-size: 13px;
-    margin-bottom: 5px;
-    display: block;
-    padding: 4px;
-    border: solid 1px #85b1de;
-    width: 300px;
-
-}
-
-
-/*.info .text {
-	margin: 10px 6px 0 20px;
-	padding: 3px 50px;
-
-}*/
-
-form {
-	margin: 50px 10px 40px 25px;
+	color: white;	
 }
 .btn {
-<<<<<<< HEAD
   background-color: #3498db;
-=======
-  margin-top: 30px;
+  margin-top: 20px;
   background: #3498db;
->>>>>>> d5ff4569df91cdb839814947f311acd7845eecac
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
   background-image: -ms-linear-gradient(top, #3498db, #2980b9);
@@ -152,9 +131,8 @@ form {
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-  margin-left: 220px;
+  margin-left: 150px;
 }
-
 .btn:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
@@ -165,22 +143,46 @@ form {
   text-decoration: none;
   margin-left: 100px;
 }
+.info {
+	margin-left: 200px;
+	margin-top: 100px;
+	font-size: 20px;
+	background-color: #d73030;
+	height: 280px;
+	width: 800px;
+	background-color: #d73030;
+	margin-bottom: 100px;
+	padding: 1em;
+	border: 1px solid black;
+	color: white;
+}
 
-<<<<<<< HEAD
-=======
+.info .text {	
+    font-family: Arial, Sans-Serif;
+    font-size: 13px;
+    margin-bottom: 5px;
+    display: block;
+    padding: 4px;
+    border: solid 1px #85b1de;
+    width: 300px;
+
+}
+form {
+	margin: 50px 10px 40px 25px;
+}
+
 .food {
 	float: right;
 	margin-right: 30px;	
 	margin-top: 25px;
 	border: 1px solid black;
 }
-
 footer {
 	clear: both;
-	height: 120px;
+	height: 140px;
 	width: 100%;
 	background-color: #a0a0a0;
-	margin-bottom: 80px;
+	margin-bottom: 20px;
 	border-top: 4px solid black;
 }
 .bottom-nav .link{
@@ -203,25 +205,6 @@ footer {
 ul > a {
 	margin: 0 20px 0 20px;
 }
-
-
-
-
-/* .footer {
-	margin-left: 200px;	
-}
-.icons {
-	margin-left: 200px;
-	width: 1000px;
-	height: 200px;
-	background-color: grey;
-}
-
-footer {
-	float: left;
-	clear: all;
-}
->>>>>>> d5ff4569df91cdb839814947f311acd7845eecac
 
 
 
